# xtd

./: CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  call_tracker.cc  iota.cc  main.cc  optional.cc  vector.cc  vector_iterator.cc
xtd/: array.hh  bool.hh  call_tracker.hh  emplacer.hh  iota.hh  optional.hh  vector.hh
